--- a/p5-intro/index.html
+++ b/p5-intro/index.html
@@ -6,6 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
 	<title>Document</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
+		canvas {
+			background-color: pink;
+		}
+	</style>
 </head>
 <body>
 	
